change port to int

--- a/examples/squidpy_tissuumaps.ipynb
+++ b/examples/squidpy_tissuumaps.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "deda7ec4",
+   "execution_count": 57,
+   "id": "5becfb71",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root: * TissUUmaps version: 3.0.8.4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import anndata\n",
     "import numpy as np\n",
@@ -25,13 +17,15 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "import tissuumaps.jupyter as tmap"
+    "import tissuumaps.jupyter as tmap\n",
+    "\n",
+    "from spatial_analysis_toolkit.view import tissuumaps_notebook_viewer"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8f492afd",
+   "id": "945fc57c",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "569d21d4",
+   "id": "09e2841a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "cb08349e",
+   "id": "cb41a6b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "82fdaad1",
+   "id": "bdb8121d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "3fc8358f",
+   "id": "8706e0e7",
    "metadata": {},
    "outputs": [
     {
@@ -147,419 +141,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "0d5fbc59",
+   "execution_count": 59,
+   "id": "209168ad",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating project file /Users/kyamauch/Documents/spatial-analysis-toolkit/examples/_project.tmap\n",
+      "Loading url:  http://localhost:5101/_project.tmap?path=Users/kyamauch/Documents/spatial-analysis-toolkit/examples\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>in_tissue</th>\n",
-       "      <th>array_row</th>\n",
-       "      <th>array_col</th>\n",
-       "      <th>n_genes_by_counts</th>\n",
-       "      <th>log1p_n_genes_by_counts</th>\n",
-       "      <th>total_counts</th>\n",
-       "      <th>log1p_total_counts</th>\n",
-       "      <th>pct_counts_in_top_50_genes</th>\n",
-       "      <th>pct_counts_in_top_100_genes</th>\n",
-       "      <th>pct_counts_in_top_200_genes</th>\n",
-       "      <th>...</th>\n",
-       "      <th>total_counts_MT</th>\n",
-       "      <th>log1p_total_counts_MT</th>\n",
-       "      <th>pct_counts_MT</th>\n",
-       "      <th>n_counts</th>\n",
-       "      <th>leiden</th>\n",
-       "      <th>cluster</th>\n",
-       "      <th>umap_0</th>\n",
-       "      <th>umap_1</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>AAACGAGACGGTTGAT-1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>35</td>\n",
-       "      <td>79</td>\n",
-       "      <td>3808</td>\n",
-       "      <td>8.245122</td>\n",
-       "      <td>9285.0</td>\n",
-       "      <td>9.136263</td>\n",
-       "      <td>23.155627</td>\n",
-       "      <td>28.723748</td>\n",
-       "      <td>36.241249</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>9285.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Thalamus_1</td>\n",
-       "      <td>11.779392</td>\n",
-       "      <td>4.416771</td>\n",
-       "      <td>6744</td>\n",
-       "      <td>5901</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAAGGGATGTAGCAAG-1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>24</td>\n",
-       "      <td>62</td>\n",
-       "      <td>5288</td>\n",
-       "      <td>8.573384</td>\n",
-       "      <td>16644.0</td>\n",
-       "      <td>9.719865</td>\n",
-       "      <td>19.718818</td>\n",
-       "      <td>25.666907</td>\n",
-       "      <td>33.699832</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>16644.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Hippocampus</td>\n",
-       "      <td>-0.759617</td>\n",
-       "      <td>1.651864</td>\n",
-       "      <td>4422</td>\n",
-       "      <td>3264</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAATGGCATGTCTTGT-1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>13</td>\n",
-       "      <td>69</td>\n",
-       "      <td>5191</td>\n",
-       "      <td>8.554874</td>\n",
-       "      <td>15977.0</td>\n",
-       "      <td>9.678968</td>\n",
-       "      <td>20.629655</td>\n",
-       "      <td>26.757213</td>\n",
-       "      <td>34.743694</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>15977.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Cortex_1</td>\n",
-       "      <td>-2.425285</td>\n",
-       "      <td>9.630324</td>\n",
-       "      <td>5393</td>\n",
-       "      <td>641</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAATGGTCAATGTGCC-1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>33</td>\n",
-       "      <td>51</td>\n",
-       "      <td>4923</td>\n",
-       "      <td>8.501876</td>\n",
-       "      <td>12454.0</td>\n",
-       "      <td>9.429877</td>\n",
-       "      <td>21.711900</td>\n",
-       "      <td>26.818693</td>\n",
-       "      <td>33.948932</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12454.0</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Lateral_ventricle</td>\n",
-       "      <td>1.369643</td>\n",
-       "      <td>4.902976</td>\n",
-       "      <td>2903</td>\n",
-       "      <td>5407</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AAATTAACGGGTAGCT-1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>34</td>\n",
-       "      <td>58</td>\n",
-       "      <td>4045</td>\n",
-       "      <td>8.305484</td>\n",
-       "      <td>11166.0</td>\n",
-       "      <td>9.320718</td>\n",
-       "      <td>27.261329</td>\n",
-       "      <td>33.100484</td>\n",
-       "      <td>40.847215</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11166.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Hippocampus</td>\n",
-       "      <td>2.563761</td>\n",
-       "      <td>2.177230</td>\n",
-       "      <td>3863</td>\n",
-       "      <td>5650</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TTGTCGTTCAGTTACC-1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>22</td>\n",
-       "      <td>58</td>\n",
-       "      <td>3443</td>\n",
-       "      <td>8.144389</td>\n",
-       "      <td>8103.0</td>\n",
-       "      <td>9.000113</td>\n",
-       "      <td>22.695298</td>\n",
-       "      <td>29.877823</td>\n",
-       "      <td>38.837468</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8103.0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Fiber_tracts</td>\n",
-       "      <td>4.211261</td>\n",
-       "      <td>6.143037</td>\n",
-       "      <td>3875</td>\n",
-       "      <td>2784</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TTGTGGCCCTGACAGT-1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>18</td>\n",
-       "      <td>60</td>\n",
-       "      <td>4971</td>\n",
-       "      <td>8.511577</td>\n",
-       "      <td>14779.0</td>\n",
-       "      <td>9.601030</td>\n",
-       "      <td>21.381690</td>\n",
-       "      <td>27.924758</td>\n",
-       "      <td>36.213546</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>14779.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Cortex_1</td>\n",
-       "      <td>-0.643128</td>\n",
-       "      <td>7.938039</td>\n",
-       "      <td>4153</td>\n",
-       "      <td>1830</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TTGTTAGCAAATTCGA-1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>22</td>\n",
-       "      <td>42</td>\n",
-       "      <td>4820</td>\n",
-       "      <td>8.480737</td>\n",
-       "      <td>14396.0</td>\n",
-       "      <td>9.574775</td>\n",
-       "      <td>20.595999</td>\n",
-       "      <td>26.674076</td>\n",
-       "      <td>34.655460</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>14396.0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Cortex_3</td>\n",
-       "      <td>-5.196085</td>\n",
-       "      <td>12.540430</td>\n",
-       "      <td>1678</td>\n",
-       "      <td>2775</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TTGTTCAGTGTGCTAC-1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>24</td>\n",
-       "      <td>64</td>\n",
-       "      <td>3372</td>\n",
-       "      <td>8.123558</td>\n",
-       "      <td>8671.0</td>\n",
-       "      <td>9.067855</td>\n",
-       "      <td>28.578019</td>\n",
-       "      <td>34.794141</td>\n",
-       "      <td>42.647907</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>8671.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Hippocampus</td>\n",
-       "      <td>0.399694</td>\n",
-       "      <td>1.503937</td>\n",
-       "      <td>4696</td>\n",
-       "      <td>3265</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TTGTTGTGTGTCAAGA-1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>31</td>\n",
-       "      <td>77</td>\n",
-       "      <td>3768</td>\n",
-       "      <td>8.234565</td>\n",
-       "      <td>9005.0</td>\n",
-       "      <td>9.105646</td>\n",
-       "      <td>20.755136</td>\n",
-       "      <td>26.496391</td>\n",
-       "      <td>34.169906</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>9005.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Thalamus_1</td>\n",
-       "      <td>12.497527</td>\n",
-       "      <td>4.915408</td>\n",
-       "      <td>6474</td>\n",
-       "      <td>4944</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>704 rows × 21 columns</p>\n",
-       "</div>"
+       "<iframe src=\"http://localhost:5101/_project.tmap?path=Users/kyamauch/Documents/spatial-analysis-toolkit/examples\" style=\"width: 100%; height: 700px; border: none\" id=\"tissUUmapsViewer_af8fd96ab7\" allowfullscreen></iframe>"
       ],
       "text/plain": [
-       "                    in_tissue  array_row  array_col  n_genes_by_counts  \\\n",
-       "AAACGAGACGGTTGAT-1          1         35         79               3808   \n",
-       "AAAGGGATGTAGCAAG-1          1         24         62               5288   \n",
-       "AAATGGCATGTCTTGT-1          1         13         69               5191   \n",
-       "AAATGGTCAATGTGCC-1          1         33         51               4923   \n",
-       "AAATTAACGGGTAGCT-1          1         34         58               4045   \n",
-       "...                       ...        ...        ...                ...   \n",
-       "TTGTCGTTCAGTTACC-1          1         22         58               3443   \n",
-       "TTGTGGCCCTGACAGT-1          1         18         60               4971   \n",
-       "TTGTTAGCAAATTCGA-1          1         22         42               4820   \n",
-       "TTGTTCAGTGTGCTAC-1          1         24         64               3372   \n",
-       "TTGTTGTGTGTCAAGA-1          1         31         77               3768   \n",
-       "\n",
-       "                    log1p_n_genes_by_counts  total_counts  log1p_total_counts  \\\n",
-       "AAACGAGACGGTTGAT-1                 8.245122        9285.0            9.136263   \n",
-       "AAAGGGATGTAGCAAG-1                 8.573384       16644.0            9.719865   \n",
-       "AAATGGCATGTCTTGT-1                 8.554874       15977.0            9.678968   \n",
-       "AAATGGTCAATGTGCC-1                 8.501876       12454.0            9.429877   \n",
-       "AAATTAACGGGTAGCT-1                 8.305484       11166.0            9.320718   \n",
-       "...                                     ...           ...                 ...   \n",
-       "TTGTCGTTCAGTTACC-1                 8.144389        8103.0            9.000113   \n",
-       "TTGTGGCCCTGACAGT-1                 8.511577       14779.0            9.601030   \n",
-       "TTGTTAGCAAATTCGA-1                 8.480737       14396.0            9.574775   \n",
-       "TTGTTCAGTGTGCTAC-1                 8.123558        8671.0            9.067855   \n",
-       "TTGTTGTGTGTCAAGA-1                 8.234565        9005.0            9.105646   \n",
-       "\n",
-       "                    pct_counts_in_top_50_genes  pct_counts_in_top_100_genes  \\\n",
-       "AAACGAGACGGTTGAT-1                   23.155627                    28.723748   \n",
-       "AAAGGGATGTAGCAAG-1                   19.718818                    25.666907   \n",
-       "AAATGGCATGTCTTGT-1                   20.629655                    26.757213   \n",
-       "AAATGGTCAATGTGCC-1                   21.711900                    26.818693   \n",
-       "AAATTAACGGGTAGCT-1                   27.261329                    33.100484   \n",
-       "...                                        ...                          ...   \n",
-       "TTGTCGTTCAGTTACC-1                   22.695298                    29.877823   \n",
-       "TTGTGGCCCTGACAGT-1                   21.381690                    27.924758   \n",
-       "TTGTTAGCAAATTCGA-1                   20.595999                    26.674076   \n",
-       "TTGTTCAGTGTGCTAC-1                   28.578019                    34.794141   \n",
-       "TTGTTGTGTGTCAAGA-1                   20.755136                    26.496391   \n",
-       "\n",
-       "                    pct_counts_in_top_200_genes  ...  total_counts_MT  \\\n",
-       "AAACGAGACGGTTGAT-1                    36.241249  ...              0.0   \n",
-       "AAAGGGATGTAGCAAG-1                    33.699832  ...              0.0   \n",
-       "AAATGGCATGTCTTGT-1                    34.743694  ...              0.0   \n",
-       "AAATGGTCAATGTGCC-1                    33.948932  ...              0.0   \n",
-       "AAATTAACGGGTAGCT-1                    40.847215  ...              0.0   \n",
-       "...                                         ...  ...              ...   \n",
-       "TTGTCGTTCAGTTACC-1                    38.837468  ...              0.0   \n",
-       "TTGTGGCCCTGACAGT-1                    36.213546  ...              0.0   \n",
-       "TTGTTAGCAAATTCGA-1                    34.655460  ...              0.0   \n",
-       "TTGTTCAGTGTGCTAC-1                    42.647907  ...              0.0   \n",
-       "TTGTTGTGTGTCAAGA-1                    34.169906  ...              0.0   \n",
-       "\n",
-       "                    log1p_total_counts_MT  pct_counts_MT  n_counts  leiden  \\\n",
-       "AAACGAGACGGTTGAT-1                    0.0            0.0    9285.0       3   \n",
-       "AAAGGGATGTAGCAAG-1                    0.0            0.0   16644.0       2   \n",
-       "AAATGGCATGTCTTGT-1                    0.0            0.0   15977.0       0   \n",
-       "AAATGGTCAATGTGCC-1                    0.0            0.0   12454.0      13   \n",
-       "AAATTAACGGGTAGCT-1                    0.0            0.0   11166.0       2   \n",
-       "...                                   ...            ...       ...     ...   \n",
-       "TTGTCGTTCAGTTACC-1                    0.0            0.0    8103.0       4   \n",
-       "TTGTGGCCCTGACAGT-1                    0.0            0.0   14779.0       0   \n",
-       "TTGTTAGCAAATTCGA-1                    0.0            0.0   14396.0       5   \n",
-       "TTGTTCAGTGTGCTAC-1                    0.0            0.0    8671.0       2   \n",
-       "TTGTTGTGTGTCAAGA-1                    0.0            0.0    9005.0       3   \n",
-       "\n",
-       "                              cluster     umap_0     umap_1     x     y  \n",
-       "AAACGAGACGGTTGAT-1         Thalamus_1  11.779392   4.416771  6744  5901  \n",
-       "AAAGGGATGTAGCAAG-1        Hippocampus  -0.759617   1.651864  4422  3264  \n",
-       "AAATGGCATGTCTTGT-1           Cortex_1  -2.425285   9.630324  5393   641  \n",
-       "AAATGGTCAATGTGCC-1  Lateral_ventricle   1.369643   4.902976  2903  5407  \n",
-       "AAATTAACGGGTAGCT-1        Hippocampus   2.563761   2.177230  3863  5650  \n",
-       "...                               ...        ...        ...   ...   ...  \n",
-       "TTGTCGTTCAGTTACC-1       Fiber_tracts   4.211261   6.143037  3875  2784  \n",
-       "TTGTGGCCCTGACAGT-1           Cortex_1  -0.643128   7.938039  4153  1830  \n",
-       "TTGTTAGCAAATTCGA-1           Cortex_3  -5.196085  12.540430  1678  2775  \n",
-       "TTGTTCAGTGTGCTAC-1        Hippocampus   0.399694   1.503937  4696  3265  \n",
-       "TTGTTGTGTGTCAAGA-1         Thalamus_1  12.497527   4.915408  6474  4944  \n",
-       "\n",
-       "[704 rows x 21 columns]"
+       "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 55,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "adata.obs"
+    "tissuumaps_notebook_viewer(adata=adata, image_container=img, port=5101)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e935e0d",
+   "id": "60bdfc33",
    "metadata": {},
    "outputs": [],
    "source": []
