--- a/examples/squidpy_tissuumaps.ipynb
+++ b/examples/squidpy_tissuumaps.ipynb
@@ -50,11 +50,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_image_container(file_name: str, image_container):\n",
-    "    imsave(\n",
-    "        file_name,\n",
-    "        np.squeeze(img.data.to_array())\n",
-    "    )"
+    "# def write_image_container(file_name: str, image_container):\n",
+    "#     imsave(\n",
+    "#         file_name,\n",
+    "#         np.squeeze(img.data.to_array())\n",
+    "#     )"
    ]
   },
   {
@@ -64,15 +64,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_anndata_to_tissuumaps(file_name: str, adata: anndata.AnnData):\n",
+    "# def write_anndata_to_tissuumaps(file_name: str, adata: anndata.AnnData):\n",
     "    \n",
-    "    obs = adata.obs\n",
-    "    obs[\"umap_0\"] = adata.obsm[\"X_umap\"][:, 0]\n",
-    "    obs[\"umap_1\"] = adata.obsm[\"X_umap\"][:, 1]\n",
-    "    obs[\"x\"] = adata.obsm[\"spatial\"][:, 0]\n",
-    "    obs[\"y\"] = adata.obsm[\"spatial\"][:, 1]\n",
+    "#     obs = adata.obs\n",
+    "#     obs[\"umap_0\"] = adata.obsm[\"X_umap\"][:, 0]\n",
+    "#     obs[\"umap_1\"] = adata.obsm[\"X_umap\"][:, 1]\n",
+    "#     obs[\"x\"] = adata.obsm[\"spatial\"][:, 0]\n",
+    "#     obs[\"y\"] = adata.obsm[\"spatial\"][:, 1]\n",
     "    \n",
-    "    obs.to_csv(file_name)"
+    "#     obs.to_csv(file_name)"
    ]
   },
   {
@@ -82,13 +82,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write image\n",
-    "image_path = \"test.tif\"\n",
-    "write_image_container(image_path, img)\n",
+    "# # write image\n",
+    "# image_path = \"test.tif\"\n",
+    "# write_image_container(image_path, img)\n",
     "\n",
-    "# write points\n",
-    "csv_path = \"test.csv\"\n",
-    "write_anndata_to_tissuumaps(\"test.csv\", adata)"
+    "# # write points\n",
+    "# csv_path = \"test.csv\"\n",
+    "# write_anndata_to_tissuumaps(\"test.csv\", adata)"
    ]
   },
   {
@@ -129,14 +129,14 @@
     }
    ],
    "source": [
-    "tmap.loaddata(\n",
-    "    images=[image_path], \n",
-    "    csvFiles=[csv_path], \n",
-    "    xSelector=\"x\", ySelector=\"y\",\n",
-    "    colorSelector=\"leiden\",\n",
-    "    scaleFactor=20, port=5101,\n",
-    "    plugins=[\"Feature_Space\"]\n",
-    ")"
+    "# tmap.loaddata(\n",
+    "#     images=[image_path], \n",
+    "#     csvFiles=[csv_path], \n",
+    "#     xSelector=\"x\", ySelector=\"y\",\n",
+    "#     colorSelector=\"leiden\",\n",
+    "#     scaleFactor=20, port=5101,\n",
+    "#     plugins=[\"Feature_Space\"]\n",
+    "# )"
    ]
   },
   {
@@ -167,7 +167,7 @@
     }
    ],
    "source": [
-    "tissuumaps_notebook_viewer(adata=adata, image_container=img, port=5101)"
+    "tissuumaps_notebook_viewer(adata=adata, image_container=img)"
    ]
   },
   {
@@ -181,7 +181,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -195,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
